--- a/column-lineage-frontend/index.html
+++ b/column-lineage-frontend/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Column Analysis</title>
-    <meta name="description" content="Database View Column Lineage Analysis System" />
+    <title>Lineage Analysis</title>
+    <meta name="description" content="Database Lineage Analysis System" />
     <script>
       // Polyfill for global object (required for AWS Amplify)
       if (typeof global === 'undefined') {
